fix anh va them noi dung

--- a/GiaoHangTietKiem/GiaoHangTietKiem/Views/GiaoHang/About.cshtml
+++ b/GiaoHangTietKiem/GiaoHangTietKiem/Views/GiaoHang/About.cshtml
@@ -22,9 +22,9 @@
             <div class="col-lg-7">
                 <h6 class="text-primary text-uppercase font-weight-bold">Về Chúng Tôi</h6>
                 <h1 class="mb-4">Nhà cung cấp dịch vụ vận chuyển đáng tin cậy & nhanh chóng</h1>
-                <p class="mb-4">Giao Hàng Tiết Kiệm cam kết đem lại cho bạn dịch vụ vận chuyển đáng tin cậy và nhanh chóng. Với hơn 1000 điểm gửi hàng trên toàn quốc. Chúng tôi sẽ vận chuyển đơn hàng của bạn tới mọi nơi.</p>
+                <p class="mb-4">Giao Hàng Chất Lượng cam kết đem lại cho bạn dịch vụ vận chuyển đáng tin cậy và nhanh chóng. Với hơn 1000 điểm gửi hàng trên toàn quốc. Chúng tôi sẽ vận chuyển đơn hàng của bạn tới mọi nơi.</p>
                 <div class="d-flex align-items-center pt-2">
-                    <button type="button" class="btn btn-primary video-btn btn-play" data-toggle="modal" data-src="https://www.youtube.com/embed/Rrr-5-4wcEs" data-target="#myModal">
+                    <button type="button" class="btn btn-primary video-btn btn-play" data-toggle="modal" data-src="https://www.youtube.com/watch?v=Wu83TlJk2og&ab_channel=GiaohangtietkiemOfficial" data-target="#myModal">
                         <span></span>
                     </button>
                     <h5 class="font-weight-bold m-0 ml-4">Play Video</h5>
@@ -71,15 +71,15 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-5">
-                <img class="img-fluid w-100" src="~/img/feature.jpg" alt="">
+                <img class="img-fluid w-100" src="~/img/image_slide5.png" alt="">
             </div>
             <div class="col-lg-7 py-5 py-lg-0">
-                <h6 class="text-primary text-uppercase font-weight-bold">TẠI SAO CHỌN CHÚNG TÔI</h6>
+                <h6 class="text-primary text-uppercase font-weight-bold">TẠI SAO CHỌN CHÚNG TÔI ?</h6>
                 <h1 class="mb-4">Dịch vụ vận chuyển nhanh, an toàn và đáng tin cậy</h1>
-                <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+                <p class="mb-4">Giao Hàng Chất Lượng tự tin và cam đoan với khách hàng rằng sẽ mang lại trải nghiệm tốt nhất đến với khách hàng. Luôn luôn lắng nghe ý kiến, đánh giá từ khách hàng và phản hồi ngay. Cảm ơn khách hàng đã sử dụng dịch vụ Giao Hàng Chất Lượng.</p>
                 <ul class="list-inline">
-                    <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Tốt nhất trong ngành</h6>
-                    <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Các dịch vụ khẩn cấp</h6></li>
+                    <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Có mặt ở 64 tỉnh thành.</h6>
+                    <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>An toàn, nhanh chóng, tin cậy.</h6></li>
                     <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Hỗ trợ khách hàng 24/7</h6></li>
                 </ul>
                 <a href="" class="btn btn-primary mt-3 py-2 px-4">Tìm hiểu thêm</a>
