--- a/GiaoHangTietKiem/GiaoHangTietKiem/Views/GiaoHang/Service.cshtml
+++ b/GiaoHangTietKiem/GiaoHangTietKiem/Views/GiaoHang/Service.cshtml
@@ -114,7 +114,7 @@
             <div class="position-relative bg-secondary p-4">
                 <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid rounded-circle" src="~/img/domixi.jpg" style="width: 60px; height: 60px;" alt="">
+                    <img class="img-fluid rounded-circle" src="~/img/image_domixi.png" style="width: 60px; height: 60px;" alt="">
                     <div class="ml-3">
                         <h6 class="font-weight-semi-bold m-0">Độ Mixi</h6>
                         <small>Streamer</small>
@@ -125,7 +125,7 @@
             <div class="position-relative bg-secondary p-4">
                 <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid rounded-circle" src="~/img/sontung.jpg" style="width: 60px; height: 60px;" alt="">
+                    <img class="img-fluid rounded-circle" src="~/img/image_sontungmtp.png" style="width: 60px; height: 60px;" alt="">
                     <div class="ml-3">
                         <h6 class="font-weight-semi-bold m-0">Sơn Tùng MTP</h6>
                         <small>Ca Sĩ</small>
@@ -136,7 +136,7 @@
             <div class="position-relative bg-secondary p-4">
                 <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid rounded-circle" src="~/img/ngokienhuy.jpg" style="width: 60px; height: 60px;" alt="">
+                    <img class="img-fluid rounded-circle" src="~/img/image_ngokienhuypng.png" style="width: 60px; height: 60px;" alt="">
                     <div class="ml-3">
                         <h6 class="font-weight-semi-bold m-0">Ngô Kiến Huy</h6>
                         <small>Ca Sĩ</small>
