--- a/GiaoHangTietKiem/GiaoHangTietKiem/Content/style.css
+++ b/GiaoHangTietKiem/GiaoHangTietKiem/Content/style.css
@@ -6,6 +6,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
+   
     --blue: #007bff;
     --indigo: #6610f2;
     --purple: #6f42c1;
@@ -13,7 +14,7 @@
     --red: #dc3545;
     --orange: #fd7e14;
     --yellow: #ffc107;
-    --green: #28a745;
+    --green: #ff914d;
     --teal: #20c997;
     --cyan: #17a2b8;
     --white: #fff;
