--- a/GiaoHangTietKiem/GiaoHangTietKiem/Views/Shared/_LayoutUser.cshtml
+++ b/GiaoHangTietKiem/GiaoHangTietKiem/Views/Shared/_LayoutUser.cshtml
@@ -72,7 +72,7 @@
     <div class="container-fluid p-0 top-bar">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 display-5 text-uppercase Title"><img src="~/img/logo1.png">GHChatLuong</h1>
+                <h1 class="m-0 display-5 text-uppercase Title"><img src="~/img/logo1.png">giaohangchatluong</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -109,7 +109,7 @@
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light btn-social mr-2" href="https://www.facebook.com/profile.php?id=100014973210247"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" href="https://www.facebook.com/profile.php?id=100014973210247"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" href="https://www.facebook.com/profile.php?id=100014973210247"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/darkin_02/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
